  (Xavier Leroy, review by David Allsopp)

- #9383: Don't assume that AWKPATH includes .
  (David Allsopp, report by Ian Zimmerman)

- #9938, #9939: Define __USE_MINGW_ANSI_STDIO=0 for the mingw-w64 ports to
  prevent their C99-compliant snprintf conflicting with ours.
  (David Allsopp, report by Michael Soegtrop, review by Xavier Leroy)

- #10835 Disable DT_TEXTREL warnings on x86 32 bit architecture by passing
  -Wl,-z,notext in mksharedlib and mkmaindll. Fixes relocation issues, reported
  in #9800, making local patches in Debian, Alpine, and FreeBSD superfluous.
  (Hannes Mehnert with Kate Deplaix and Stéphane Glondu, review by Xavier Leroy)

### Bug fixes:

- #9326, #10125: Gc.set incorrectly handles the three `custom_*` fields,
  causing a performance regression
  (report by Emilio Jesús Gallego Arias, analysis and fix by Stephen Dolan,
   code by Xavier Leroy, review by Hugo Heuzard and Gabriel Scherer)

- #9925: Correct passing -fdebug-prefix-map to flexlink on Cygwin by prefixing
  it with -link.
  (David Allsopp, review by Xavier Leroy)

- #10062: set ARCH_INT64_PRINTF_FORMAT correctly for both modes of mingw-w64
  (David Allsopp, review by Xavier Leroy)

- #10250, #10266: Dynamically allocate alternate signal stacks to
  accommodate changes in Glibc 2.34.
  (Xavier Leroy, reports by Tomasz Kłoczko and R.W.M. Jones, review by Anil
   Madhavapeddy, Stephen Dolan, and Florian Angeletti)

- #10698, #10726, #10891: Free the alternate signal stack when the main OCaml
  code or an OCaml thread stops.
  (Xavier Leroy, review by David Allsopp, Florian Angeletti and Damien Doligez)

- #12116, #12993: explicitly build non PIE executables on x86 32bits
  architectures
  (Florian Angeletti, review by David Allsopp)

OCaml 4.09.1 (16 Mars 2020):
----------------------------

- #8855, #8858: Links for tools not created when installing with
  --disable-installing-byecode-programs (e.g. ocamldep.opt installed, but
  ocamldep link not created)